plaid , dwallow, and add database with it

--- a/.env
+++ b/.env
@@ -15,11 +15,11 @@ PLAID_CLIENT_ID=66d43b23e66ef5001a59bb8e
 PLAID_SECRET=ff2f7bf3f7950f83fd4e1991e7f35c
 PLAID_ENV=sandbox
 PLAID_PRODUCTS=auth,transaction,identity
-PLAID_COUNTRY_CODES=India
+PLAID_COUNTRY_CODES=US
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
+DWOLLA_KEY=nZzdqKnlttG1a3yUAsFIdwyxeLHKgnO5nUhxmPN3K7pc0GzbYo
+DWOLLA_SECRET=fEOFH2KugRKhXLuhdtdAjhfDTEXZ0wbaVLNuLbrgiso8tfFWgr
 DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
 DWOLLA_ENV=sandbox
 
